rep card styling and fixed overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,8 @@
     font-family: 'Roboto Condensed', sans-serif;
     background-color: rgb(26, 26, 26);
     color: #ffffff;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 #react-navbar{
